<resources>
    <string name="app_name">RadioButton</string>
    <string name="txt_resultado">Resultado</string>
    <string name="input_numer1">Dame el primer valor</string>
    <string name="input_number2">Dame el segundo valor</string>
    <string name="button_realizar">Realizar</string>}
    <string name="rb_sumar">Sumar</string>
    <string name="rb_restar">Restar</string>
</resources>
